<resources>
    <string name="app_name">Ex4-2</string>

    <string name="action_settings">Settings</string>

    <string name="btn_calcBMI">計算BMI</string>
    <string name="btn_end">結束</string>
    <string name="tv_height">身高:</string>
    <string name="tv_weight">體重:</string>
    <string name="btn_back">返回</string>
    <string name="btn_submit">送出</string>
    <string name="btn_clear">清除</string>

    <string name="text_bmi">BMI值為: </string>
    <string name="text_result">結果為: </string>
    <string name="text_tooThin">過瘦</string>
    <string name="text_normal">正常</string>
    <string name="text_overweight">過重</string>
    <string name="text_inputError">輸入資料請勿空白，且輸入為數字。</string>

    <string name="hint_height_cm">公分</string>
    <string name="hint_weight_kg">公斤</string>
</resources>
